chapter02b/config/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogcat
spec:
  template:
    spec:
      serviceAccountName: dogcat-dev
      containers:
        - name: dogcat
