chapter02b/config/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogcat-iap
  annotations:
    "cert-manager.io/cluster-issuer": "letsencrypt"
spec:
  rules:
  - host: "dogcat.dev.dogcat.nvoss.demo.altostrat.com"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: dogcat-iap-dev # will be suffixed by kustomization.yaml
            port:
              number: 8080
  tls:
  - hosts:
      - "dogcat.dev.dogcat.nvoss.demo.altostrat.com"
    secretName: dogcat-dev-tls
